--- a/main.css
+++ b/main.css
@@ -14,6 +14,20 @@ a:hover {
     text-decoration: underline;
 }
 
+input {
+    margin: 0px;
+    padding: 5px;
+    background: #aaa;
+    color: #323232;
+    border: none;
+    border-radius: 5px;
+}
+
+#dosage {
+    margin: 0 5px;
+    width: 75px;
+}
+
 #menu {
     display: none;
 }
