--- a/css/triangles.css
+++ b/css/triangles.css
@@ -27,6 +27,7 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
+    max-width: 700px;
     width: 100%;
     height: 100%;
     -webkit-transform: translate(-50%, -50%);
